syntax = "proto3";

package protocol;

import "google/protobuf/any.proto";
import "core/ledger_yi.proto";

option java_package = "cn.ledgeryi.protos.contract";

message SystemContract {
    Transaction.Contract.ContractType type = 1;
    google.protobuf.Any contract = 2;
}